// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`presetReact should be good 1`] = `
Object {
  "devtool": "cheap-module-source-map",
  "entry": Object {
    "index": Array [
      "react-hot-loader/patch",
      "webpack-hot-middleware/client",
      "index.js",
    ],
  },
  "externals": Array [],
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "exclude": /node_modules/,
            "test": /\\\\\\.jsx\\?\\$/,
            "use": Array [
              Object {
                "loader": "babel-loader",
                "options": Object {
                  "babelrc": false,
                  "plugins": Array [
                    "react-hot-loader/babel",
                    "@babel/plugin-proposal-object-rest-spread",
                    "@babel/plugin-proposal-class-properties",
                    "@babel/plugin-syntax-dynamic-import",
                    "@babel/transform-classes",
                    "@babel/transform-react-jsx-source",
                  ],
                  "presets": Array [
                    Array [
                      "@babel/preset-env",
                      Object {
                        "modules": false,
                        "targets": Object {
                          "browsers": Array [
                            "last 2 Chrome versions",
                            "not Chrome < 60",
                            "last 2 Safari versions",
                            "not Safari < 10.1",
                            "last 2 iOS versions",
                            "not iOS < 10.3",
                            "last 2 Firefox versions",
                            "not Firefox < 54",
                            "last 2 Edge versions",
                            "not Edge < 15",
                          ],
                        },
                        "useBuiltIns": false,
                      },
                    ],
                    "@babel/preset-react",
                    "@babel/preset-flow",
                  ],
                },
              },
              Object {
                "loader": "eslint-loader",
                "options": Object {},
              },
            ],
          },
          Object {
            "test": /\\.module\\.css\\$/i,
            "use": Array [
              Object {
                "loader": "style-loader",
                "options": Object {},
              },
              Object {
                "loader": "css-loader",
                "options": Object {
                  "importLoaders": 1,
                  "localIdentName": "[path][name]__[local]--[hash:base64:5]",
                  "minimize": false,
                  "modules": true,
                  "sourceMap": true,
                },
              },
              Object {
                "loader": "postcss-loader",
                "options": Object {
                  "plugins": Array [
                    [Function],
                    [Function],
                  ],
                  "sourceMap": true,
                },
              },
            ],
          },
          Object {
            "test": /\\^\\(\\?:\\(\\?!\\.module\\)\\.\\)\\*\\.css\\$/i,
            "use": Array [
              Object {
                "loader": "style-loader",
                "options": Object {},
              },
              Object {
                "loader": "css-loader",
                "options": Object {
                  "importLoaders": 1,
                  "localIdentName": "[path][name]__[local]--[hash:base64:5]",
                  "minimize": false,
                  "modules": false,
                  "sourceMap": true,
                },
              },
              Object {
                "loader": "postcss-loader",
                "options": Object {
                  "plugins": Array [
                    [Function],
                    [Function],
                  ],
                  "sourceMap": true,
                },
              },
            ],
          },
          Object {
            "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\)\\$/i,
            "use": Object {
              "loader": "url-loader",
              "options": Object {
                "emitFile": true,
                "limit": 10000,
                "name": "[name].[ext]",
                "publicPath": "/",
              },
            },
          },
          Object {
            "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/i,
            "use": Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": true,
                "limit": 10000,
                "name": "[name].[ext]",
                "publicPath": "/",
              },
            },
          },
        ],
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name].chunk.js",
    "crossOriginLoading": "anonymous",
    "filename": "[name].js",
    "path": "C:\\\\projects\\\\dev\\\\webpack-features\\\\static\\\\dist",
    "publicPath": "/",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
    NamedChunksPlugin {
      "nameResolver": [Function],
    },
    HashedModuleIdsPlugin {
      "options": Object {
        "hashDigest": "base64",
        "hashDigestLength": 4,
        "hashFunction": "md5",
      },
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "\\"development\\"",
      },
    },
    CleanWebpackPlugin {
      "options": Object {
        "allowExternal": false,
        "dry": false,
        "root": "C:\\\\projects\\\\dev\\\\webpack-features",
        "verbose": false,
      },
      "paths": Array [
        "static/dist",
      ],
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "../index.html",
        "hash": false,
        "inject": true,
        "minify": false,
        "showErrors": true,
        "template": "./src/index.html",
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
  "stats": Object {
    "children": false,
    "modules": false,
  },
}
`;

exports[`presetReact should be good with emotion 1`] = `
Object {
  "devtool": "cheap-module-source-map",
  "entry": Object {
    "index": Array [
      "react-hot-loader/patch",
      "webpack-hot-middleware/client",
      "index.js",
    ],
  },
  "externals": Array [],
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "exclude": /node_modules/,
            "test": /\\\\\\.jsx\\?\\$/,
            "use": Array [
              Object {
                "loader": "babel-loader",
                "options": Object {
                  "babelrc": false,
                  "plugins": Array [
                    Array [
                      "emotion",
                      Object {
                        "extractStatic": false,
                      },
                    ],
                    "react-hot-loader/babel",
                    "@babel/plugin-proposal-object-rest-spread",
                    "@babel/plugin-proposal-class-properties",
                    "@babel/plugin-syntax-dynamic-import",
                    "@babel/transform-classes",
                    "@babel/transform-react-jsx-source",
                  ],
                  "presets": Array [
                    Array [
                      "@babel/preset-env",
                      Object {
                        "modules": false,
                        "targets": Object {
                          "browsers": Array [
                            "last 2 Chrome versions",
                            "not Chrome < 60",
                            "last 2 Safari versions",
                            "not Safari < 10.1",
                            "last 2 iOS versions",
                            "not iOS < 10.3",
                            "last 2 Firefox versions",
                            "not Firefox < 54",
                            "last 2 Edge versions",
                            "not Edge < 15",
                          ],
                        },
                        "useBuiltIns": false,
                      },
                    ],
                    "@babel/preset-react",
                    "@babel/preset-flow",
                  ],
                },
              },
              Object {
                "loader": "eslint-loader",
                "options": Object {},
              },
            ],
          },
          Object {
            "test": /\\.module\\.css\\$/i,
            "use": Array [
              Object {
                "loader": "style-loader",
                "options": Object {},
              },
              Object {
                "loader": "css-loader",
                "options": Object {
                  "importLoaders": 1,
                  "localIdentName": "[path][name]__[local]--[hash:base64:5]",
                  "minimize": false,
                  "modules": true,
                  "sourceMap": true,
                },
              },
              Object {
                "loader": "postcss-loader",
                "options": Object {
                  "plugins": Array [
                    [Function],
                    [Function],
                  ],
                  "sourceMap": true,
                },
              },
            ],
          },
          Object {
            "test": /\\^\\(\\?:\\(\\?!\\.module\\)\\.\\)\\*\\.css\\$/i,
            "use": Array [
              Object {
                "loader": "style-loader",
                "options": Object {},
              },
              Object {
                "loader": "css-loader",
                "options": Object {
                  "importLoaders": 1,
                  "localIdentName": "[path][name]__[local]--[hash:base64:5]",
                  "minimize": false,
                  "modules": false,
                  "sourceMap": true,
                },
              },
              Object {
                "loader": "postcss-loader",
                "options": Object {
                  "plugins": Array [
                    [Function],
                    [Function],
                  ],
                  "sourceMap": true,
                },
              },
            ],
          },
          Object {
            "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\|svg\\)\\$/i,
            "use": Object {
              "loader": "url-loader",
              "options": Object {
                "emitFile": true,
                "limit": 10000,
                "name": "[name].[ext]",
                "publicPath": "/",
              },
            },
          },
          Object {
            "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\)\\$/i,
            "use": Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": true,
                "limit": 10000,
                "name": "[name].[ext]",
                "publicPath": "/",
              },
            },
          },
        ],
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name].chunk.js",
    "crossOriginLoading": "anonymous",
    "filename": "[name].js",
    "path": "C:\\\\projects\\\\dev\\\\webpack-features\\\\static\\\\dist",
    "publicPath": "/",
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
    NamedChunksPlugin {
      "nameResolver": [Function],
    },
    HashedModuleIdsPlugin {
      "options": Object {
        "hashDigest": "base64",
        "hashDigestLength": 4,
        "hashFunction": "md5",
      },
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "\\"development\\"",
      },
    },
    CleanWebpackPlugin {
      "options": Object {
        "allowExternal": false,
        "dry": false,
        "root": "C:\\\\projects\\\\dev\\\\webpack-features",
        "verbose": false,
      },
      "paths": Array [
        "static/dist",
      ],
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "../index.html",
        "hash": false,
        "inject": true,
        "minify": false,
        "showErrors": true,
        "template": "./src/index.html",
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
  "stats": Object {
    "children": false,
    "modules": false,
  },
}
`;
